<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/search_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_margin"
            android:elevation="@dimen/elevation"
            android:padding="@dimen/search_margin"
            app:cardCornerRadius="@dimen/search_margin_half">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/search_margin"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_reminder"
                        android:textColor="@color/white"
                        android:textSize="@dimen/widget_font_size_big"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_will_remind_you_to_come_back_every_day"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_normal" />

                </LinearLayout>

                <ToggleButton
                    android:id="@+id/tb_daily_reminder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/search_margin"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textOff="@string/disabled"
                    android:textOn="@string/enabled"
                    android:textSize="@dimen/font_size_normal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_margin"
            android:elevation="@dimen/elevation"
            android:padding="@dimen/search_margin"
            app:cardCornerRadius="@dimen/card_corner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/search_margin"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_today_reminder"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/you_will_get_notification_about_today_s_released_movie_s"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_normal" />

                </LinearLayout>

                <ToggleButton
                    android:id="@+id/tb_release_today_reminder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/search_margin"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textOff="@string/disabled"
                    android:textOn="@string/enabled"
                    android:textSize="@dimen/font_size_normal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>